columns fixed with overflow

--- a/non-pages/css/style.less
+++ b/non-pages/css/style.less
@@ -1,7 +1,7 @@
 //color variables
-@todayHoursBackground: lightBlue;
+@headerInfoBackground: lightBlue;
 @slideshowBackground: Orange;
-@contentBackgroun: tan;
+@contentBackground: tan;
 @footerBackground: lightYellow;
 
 /*------------------------- general syles & global positioning */
@@ -25,7 +25,8 @@ p{
 inside that, they need a div with class "widthContainer". This allows content to be partial width, but the background to go full width
 for columns, there's a div with class "colContainer" (to make sure elements don't float outside). An important thing is to have this clear: both
 colContainer is like a row, & inside 2 divs get classes "twoCol". They float left/right on big screens then span the entire width on small screens
-using a min-width approach for media queries, I start with the smallest screens, then @ a certain size, style for the larger screen  */
+using a min-width approach for media queries, I start with the smallest screens, then @ a certain size, style for the larger screen  
+Since columns are floated elements, MUST ADD &nbsp; inside the "widthContainer" AT THE END*/
 
 //width & positioning variables
 .twoCol {   /*using a min-width approach it starts off 100% & is changed later */
@@ -42,42 +43,64 @@ using a min-width approach for media queries, I start with the smallest screens,
     transition: 1.5s;   /*transition the width to 100% later on */
 }
 
+
 /*media queries on small screen to fix columns & mkae full width */
 @media (min-width: 800px){ /* these are actually what you see on big screens */
     .twoCol {
         width: 50%;
+        float: left;     /* both float left so 2 columns end up on one row */
     }
     .widthContainer {
         width:70%;
     }
 }
 
+.todayHours{
+    float:none;
+}
+.tinyLocation{
+    float:none;
+}
+@media (min-width: 1000px){ /* these are actually what you see on big screens */
+    .todayHours{
+        float:left;
+    }
+    .tinyLocation{
+        float:right;
+    }
+}
+
+.mainContent, footer, .headerInfo .widthContainer {  /* THIS IS MAGIC. Since twoCol & most elements are floated, their parent take up no height. This forces the parent to contain children */
+    overflow: auto;   /* hidden or auto both seem to work */
+}
 .colContainer{
     clear:both; /* this is important, so that multiple columns don't all go right */
 
-    > .twoCol:nth-child(1){       /* make the 1st column float left */
+/*    > .twoCol:nth-child(1){        make the 1st column float left 
         float: left;
     }
-    > .twoCol:nth-child(2){       /* make the 2nd column float left */
+    > .twoCol:nth-child(2){        make the 2nd column float left 
         float: right;
-    }
+    }*/
 }
 
+
+
 .todayHours .widthContainer{
-        position: relative;
+    //position: relative;
 }
 .todayHours .widthContainer div{
-    position: absolute;
+    //position: absolute;
 }
 .tinyLocation{
-    top: 10px;
-    right: 0;
+    //top: 10px;
+    //right: 0;
 }
 /*------------------------- end positioning/layout section */
 
 /*-------------------------color of page secions */
-.todayHours {
-    background: @todayHoursBackground;
+.headerInfo {
+    background: @headerInfoBackground;
 }
 .galleria{
     height: 350px;
@@ -90,7 +113,7 @@ using a min-width approach for media queries, I start with the smallest screens,
 }
 
 .mainContent{
-    background: @contentBackgroun;
+    background: @contentBackground;
 }
 
 footer {
